--- a/visualization.html
+++ b/visualization.html
@@ -495,6 +495,28 @@
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
+        .limit-buttons {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 10px;
+        }
+        .limit-button {
+            flex: 1;
+            padding: 8px;
+            background: var(--card-bg);
+            color: var(--text-primary);
+            border: 1px solid var(--border-color);
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .limit-button.active {
+            background: var(--active-bg);
+            color: #000;
+        }
+        .limit-button:hover {
+            background: var(--secondary-color);
+        }
         @media (max-width: 1600px) {
             #gamesContainer {
                 grid-template-columns: repeat(2, 1fr);
@@ -958,57 +980,117 @@
                 bttsRate: Math.round((bttsGames / leagueGames.length) * 100)
             };
         }
-        function getMetrics(leagueName, homePlayer, awayPlayer, allGames) {
-            const leagueGames = allGames.filter(game => game.competition?.name === leagueName).slice(0, 10);
-            if (leagueGames.length === 0) {
+        async function fetchH2HMetrics(homePlayer, awayPlayer) {
+            try {
+                const response = await fetch(`https://caveira-proxy.onrender.com/api/v1/historico/confronto/${encodeURIComponent(homePlayer)}/${encodeURIComponent(awayPlayer)}?page=1&limit=20`);
+                if (!response.ok) {
+                    throw new Error(`Erro ao buscar H2H: ${response.status}`);
+                }
+                const data = await response.json();
+                return data;
+            } catch (error) {
+                console.error('Erro ao buscar H2H:', error);
+                return { matches: [], player1: homePlayer, player2: awayPlayer, player1_wins: 0, player2_wins: 0 };
+            }
+        }
+        function calculateMetrics(h2hData, numGames = 0) {
+            let matches = h2hData.matches || [];
+            if (numGames > 0) {
+                matches = matches.slice(0, numGames);
+            }
+            const numMatches = matches.length;
+            if (numMatches === 0) {
                 return {
-                    items: [
-                        { name: "Over 2.5 FT", value: 0, raw: "(0/0)" },
-                        { name: "Over 3.5 FT", value: 0, raw: "(0/0)" },
-                        { name: "League Avg Goals", value: 0, raw: "(Over 2.5: 0%)" }
-                    ],
-                    over15: 0,
-                    over25: 0,
-                    over35: 0,
-                    btts: 0,
-                    form: 0
+                    avgHtGoals: 0,
+                    pctBttsHt: 0,
+                    avgFtGoals: 0,
+                    pctBttsSecond: 0,
+                    bestPlayer: 'N/A',
+                    avgBestGoals: 0
                 };
             }
-            const over1_5Games = leagueGames.filter(game => parseScore(game.score).totalGoals > 1.5).length;
-            const over2_5Games = leagueGames.filter(game => parseScore(game.score).totalGoals > 2.5).length;
-            const over3_5Games = leagueGames.filter(game => parseScore(game.score).totalGoals > 3.5).length;
-            const bttsGames = leagueGames.filter(game => {
-                const score = parseScore(game.score);
-                return score.homeGoals > 0 && score.awayGoals > 0;
-            }).length;
-            const totalGoals = leagueGames.reduce((sum, game) => sum + parseScore(game.score).totalGoals, 0);
-            const avgGoals = (totalGoals / leagueGames.length).toFixed(1);
-            let metrics = [];
-            if (leagueName === "Esoccer Battle - 8 mins play" || leagueName === "Esoccer H2H GG League - 8 mins play") {
-                metrics = [
-                    { name: "Over 1.5 FT", value: Math.round((over1_5Games / leagueGames.length) * 100), raw: `(${over1_5Games}/${leagueGames.length})` },
-                    { name: "Over 2.5 FT", value: Math.round((over2_5Games / leagueGames.length) * 100), raw: `(${over2_5Games}/${leagueGames.length})` },
-                    { name: "League Avg Goals", value: avgGoals, raw: `(Over 1.5: ${Math.round((over1_5Games / leagueGames.length) * 100)}%)` }
-                ];
-            } else {
-                metrics = [
-                    { name: "Over 2.5 FT", value: Math.round((over2_5Games / leagueGames.length) * 100), raw: `(${over2_5Games}/${leagueGames.length})` },
-                    { name: "Over 3.5 FT", value: Math.round((over3_5Games / leagueGames.length) * 100), raw: `(${over3_5Games}/${leagueGames.length})` },
-                    { name: "League Avg Goals", value: avgGoals, raw: `(Over 2.5: ${Math.round((over2_5Games / leagueGames.length) * 100)}%)` }
-                ];
-            }
+            let totalHtGoals = 0;
+            let bttsHtCount = 0;
+            let totalFtGoals = 0;
+            let bttsSecondCount = 0;
+            let player1Wins = 0;
+            let player2Wins = 0;
+            let player1Goals = 0;
+            let player2Goals = 0;
+
+            matches.forEach(match => {
+                const htHome = match.halftime_score_home || 0;
+                const htAway = match.halftime_score_away || 0;
+                totalHtGoals += htHome + htAway;
+                if (htHome > 0 && htAway > 0) bttsHtCount++;
+
+                const ftHome = match.score_home || 0;
+                const ftAway = match.score_away || 0;
+                totalFtGoals += ftHome + ftAway;
+
+                const secondHome = ftHome - htHome;
+                const secondAway = ftAway - htAway;
+                if (secondHome > 0 && secondAway > 0) bttsSecondCount++;
+
+                const homePlayer = match.home_player;
+                const isPlayer1Home = homePlayer === h2hData.player1;
+                const player1Score = isPlayer1Home ? ftHome : ftAway;
+                const player2Score = isPlayer1Home ? ftAway : ftHome;
+                player1Goals += player1Score;
+                player2Goals += player2Score;
+
+                if (player1Score > player2Score) player1Wins++;
+                else if (player2Score > player1Score) player2Wins++;
+            });
+
+            const avgHtGoals = (totalHtGoals / numMatches).toFixed(2);
+            const pctBttsHt = ((bttsHtCount / numMatches) * 100).toFixed(2);
+            const avgFtGoals = (totalFtGoals / numMatches).toFixed(2);
+            const pctBttsSecond = ((bttsSecondCount / numMatches) * 100).toFixed(2);
+
+            const bestPlayer = player1Wins > player2Wins ? h2hData.player1 : h2hData.player2;
+            const bestGoals = player1Wins > player2Wins ? player1Goals : player2Goals;
+            const avgBestGoals = (bestGoals / numMatches).toFixed(2);
+
             return {
-                items: metrics,
-                over15: Math.round((over1_5Games / leagueGames.length) * 100),
-                over25: Math.round((over2_5Games / leagueGames.length) * 100),
-                over35: Math.round((over3_5Games / leagueGames.length) * 100),
-                btts: Math.round((bttsGames / leagueGames.length) * 100),
-                form: 0
+                avgHtGoals,
+                pctBttsHt,
+                avgFtGoals,
+                pctBttsSecond,
+                bestPlayer,
+                avgBestGoals
             };
+        }
+        function renderMetrics(metricsContainer, metrics) {
+            metricsContainer.innerHTML = `
+                <div class="metric-item">
+                    <span class="metric-name"><span class="metric-icon">📈</span>Média Gols HT</span>
+                    <span class="metric-value">${metrics.avgHtGoals}</span>
+                </div>
+                <div class="metric-item">
+                    <span class="metric-name"><span class="metric-icon">⚽</span>% BTTS HT</span>
+                    <span class="metric-value">${metrics.pctBttsHt}%</span>
+                </div>
+                <div class="metric-item">
+                    <span class="metric-name"><span class="metric-icon">📊</span>Média Gols FT</span>
+                    <span class="metric-value">${metrics.avgFtGoals}</span>
+                </div>
+                <div class="metric-item">
+                    <span class="metric-name"><span class="metric-icon">⚽</span>% BTTS 2º Tempo</span>
+                    <span class="metric-value">${metrics.pctBttsSecond}%</span>
+                </div>
+                <div class="metric-item">
+                    <span class="metric-name"><span class="metric-icon">👑</span>Best Player</span>
+                    <span class="metric-value">${metrics.bestPlayer}</span>
+                </div>
+                <div class="metric-item">
+                    <span class="metric-name"><span class="metric-icon">⚽</span>Média Gols Best Player</span>
+                    <span class="metric-value">${metrics.avgBestGoals}</span>
+                </div>
+            `;
         }
         function meetsCriteria(leagueName, metrics, allGames) {
             const leagueStats = calculateLeagueStats(leagueName, allGames);
-            if (metrics.form <= 45) return false;
             const is8MinLeague = [
                 "Esoccer Battle - 8 mins play",
                 "Esoccer Battle Volta - 6 mins play",
@@ -1115,9 +1197,12 @@
                     const awayPlayer = game.away_player_name || 'Desconhecido';
                     const homeTeam = game.home_team_name || 'N/A';
                     const awayTeam = game.away_team_name || 'N/A';
+                    const h2hData = await fetchH2HMetrics(homePlayer, awayPlayer);
                     const card = document.createElement('div');
                     card.className = `card ${leagueClasses[leagueName] || ''}`;
-                    const metrics = getMetrics(leagueName, homePlayer, awayPlayer, allGames);
+                    card.dataset.h2h = JSON.stringify(h2hData);
+                    card.dataset.currentLimit = '0'; // 0 for all
+                    const metrics = calculateMetrics(h2hData);
                     const isHighlighted = meetsCriteria(leagueName, metrics, allGames);
                     if (isHighlighted) {
                         card.classList.add('highlight-card');
@@ -1140,14 +1225,16 @@
                     teams.className = 'teams';
                     const homeTeamElement = document.createElement('div');
                     homeTeamElement.className = 'team';
+                    const homeTeamNoSpace = homeTeam.replace(/\s/g, '');
                     homeTeamElement.innerHTML = `
-                        <img src="https://via.placeholder.com/50?text=${homeTeam[0] || '?'}" alt="${homeTeam}">
+                        <img src="https://via.placeholder.com/50?text=${homeTeamNoSpace[0] || '?'}" alt="${homeTeam}">
                         <span>${homePlayer}</span>
                         <span class="team-name">${homeTeam}</span>`;
                     const awayTeamElement = document.createElement('div');
                     awayTeamElement.className = 'team';
+                    const awayTeamNoSpace = awayTeam.replace(/\s/g, '');
                     awayTeamElement.innerHTML = `
-                        <img src="https://via.placeholder.com/50?text=${awayTeam[0] || '?'}" alt="${awayTeam}">
+                        <img src="https://via.placeholder.com/50?text=${awayTeamNoSpace[0] || '?'}" alt="${awayTeam}">
                         <span>${awayPlayer}</span>
                         <span class="team-name">${awayTeam}</span>`;
                     teams.appendChild(homeTeamElement);
@@ -1156,21 +1243,21 @@
                     matchTime.className = 'match-time';
                     const startTime = game.scheduled_time_brt ? new Date(game.scheduled_time_brt.replace(' ', 'T')) : null;
                     matchTime.innerText = startTime ? startTime.toLocaleString() : 'Horário não disponível';
+                    const limitButtons = document.createElement('div');
+                    limitButtons.className = 'limit-buttons';
+                    const btn5 = document.createElement('button');
+                    btn5.className = 'limit-button';
+                    btn5.innerText = '5 Jogos';
+                    btn5.onclick = () => updateCardMetrics(card, 5);
+                    const btn10 = document.createElement('button');
+                    btn10.className = 'limit-button';
+                    btn10.innerText = '10 Jogos';
+                    btn10.onclick = () => updateCardMetrics(card, 10);
+                    limitButtons.appendChild(btn5);
+                    limitButtons.appendChild(btn10);
                     const metricsContainer = document.createElement('div');
                     metricsContainer.className = 'metrics-container';
-                    metricsContainer.innerHTML = metrics?.items?.map(metric => {
-                        let icon = '⬤';
-                        if (metric.name.includes('1.5 FT')) icon = '📈';
-                        else if (metric.name.includes('2.5 FT')) icon = '📊';
-                        else if (metric.name.includes('3.5 FT')) icon = '📉';
-                        else if (metric.name.includes('Avg Goals')) icon = '⚽';
-                        return `
-                            <div class="metric-item">
-                                <span class="metric-name"><span class="metric-icon">${icon}</span>${metric.name}</span>
-                                <span class="metric-value">${metric.value}${metric.name.includes('Avg Goals') ? '' : '%'} <span class="metric-raw">${metric.raw}</span></span>
-                            </div>
-                        `;
-                    }).join('');
+                    renderMetrics(metricsContainer, metrics);
                     const h2hButton = document.createElement('button');
                     h2hButton.className = 'h2h-button';
                     h2hButton.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="m19 9-5 5-4-4-3 3"/></svg> Ver H2H';
@@ -1179,6 +1266,7 @@
                     };
                     card.appendChild(teams);
                     card.appendChild(matchTime);
+                    card.appendChild(limitButtons);
                     card.appendChild(metricsContainer);
                     card.appendChild(h2hButton);
                     leagueGamesGrid.appendChild(card);
@@ -1201,6 +1289,18 @@
                 gamesContainer.appendChild(leagueSection);
             }
             applyFilters();
+        }
+        function updateCardMetrics(card, numGames) {
+            const h2hData = JSON.parse(card.dataset.h2h);
+            const metrics = calculateMetrics(h2hData, numGames);
+            const metricsContainer = card.querySelector('.metrics-container');
+            renderMetrics(metricsContainer, metrics);
+            card.dataset.currentLimit = numGames.toString();
+            // Update button active states
+            const buttons = card.querySelectorAll('.limit-button');
+            buttons.forEach(btn => btn.classList.remove('active'));
+            if (numGames === 5) buttons[0].classList.add('active');
+            if (numGames === 10) buttons[1].classList.add('active');
         }
         function applyFilters() {
             if (!upcomingGamesData) return;
