--- a/over.html
+++ b/over.html
@@ -10,10 +10,10 @@
             --primary: #22c55e;
             --primary-dark: #16a34a;
             --secondary: #64748b;
-            --bg-dark: #000000; /* Fundo preto */
-            --bg-card: #000000; /* Fundo preto */
+            --bg-dark: #000000;
+            --bg-card: #000000;
             --bg-surface: #1e293b;
-            --text-primary: #ffffff; /* Texto branco para contraste */
+            --text-primary: #ffffff;
             --text-secondary: #cbd5e1;
             --text-muted: #94a3b8;
             --border: #374151;
@@ -21,7 +21,7 @@
             --warning: #f59e0b;
             --danger: #ef4444;
             --info: #3b82f6;
-            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.2), 0 2px 4px -1px rgba(0, 0, 0, 0.1);
             --radius: 8px;
         }
 
@@ -167,6 +167,7 @@
             border-radius: var(--radius);
             box-shadow: var(--shadow);
             overflow-x: auto;
+            border: 1px solid var(--border);
         }
 
         table {
@@ -179,13 +180,14 @@
         th {
             background: var(--bg-surface);
             color: var(--text-primary);
-            padding: 1rem;
+            padding: 1.2rem 1.5rem;
             text-align: left;
-            font-weight: 600;
+            font-weight: 700;
             position: sticky;
             top: 0;
             z-index: 10;
-            border-bottom: 2px solid var(--border);
+            border-bottom: 3px solid var(--border);
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         }
 
         th:hover {
@@ -194,26 +196,23 @@
         }
 
         th.filtered {
-            border-bottom: 2px solid var(--primary);
-        }
-
-        th.filtered::after {
-            content: '\f0b0';
-            font-family: "Font Awesome 6 Free";
-            font-weight: 900;
-            font-size: 0.75rem;
-            margin-left: 0.5rem;
+            border-bottom: 3px solid var(--primary);
             color: var(--primary);
         }
 
         td {
-            padding: 1rem;
-            border-bottom: 1px solid var(--border);
+            padding: 1rem 1.5rem;
+            border-bottom: 2px solid var(--border);
             vertical-align: middle;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+        }
+
+        tbody tr {
+            transition: background 0.3s ease;
         }
 
         tbody tr:hover {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.1);
         }
 
         .league-name {
@@ -222,16 +221,17 @@
             gap: 0.5rem;
             padding: 0.5rem 1rem;
             border-radius: 50px;
-            font-size: 0.75rem;
-            font-weight: 600;
-            color: #000000; /* Fonte preta para legibilidade */
-            background: #ffffff; /* Fundo branco para contraste */
+            font-size: 0.85rem;
+            font-weight: 700;
+            color: #000000;
+            background: #ffffff;
+            text-shadow: none;
         }
 
-        .team-match {
+        .team-match, .date-time {
             display: flex;
             flex-direction: column;
-            gap: 0.25rem;
+            gap: 0.3rem;
         }
 
         .team-name {
@@ -240,43 +240,30 @@
 
         .vs {
             color: var(--text-muted);
-            font-size: 0.75rem;
-        }
-
-        .date-time {
-            display: flex;
-            flex-direction: column;
-            gap: 0.25rem;
-        }
-
-        .date {
-            font-weight: 500;
-        }
-
-        .time {
-            color: var(--text-secondary);
-            font-size: 0.75rem;
+            font-size: 0.8rem;
         }
 
         .stat-pill {
             display: inline-block;
-            padding: 0.25rem 0.75rem;
-            border-radius: 12px;
-            font-size: 0.75rem;
+            padding: 0.3rem 1rem;
+            border-radius: 16px;
+            font-size: 0.8rem;
             font-weight: 600;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
         }
 
-        .positive-high { background: rgba(16, 185, 129, 0.8); color: white; }
-        .positive-medium { background: rgba(16, 185, 129, 0.6); color: white; }
-        .positive-low { background: rgba(16, 185, 129, 0.4); color: white; }
-        .neutral { background: rgba(107, 114, 128, 0.3); color: white; }
-        .negative-low { background: rgba(244, 63, 94, 0.4); color: white; }
-        .negative-medium { background: rgba(244, 63, 94, 0.6); color: white; }
-        .negative-high { background: rgba(244, 63, 94, 0.8); color: white; }
+        .positive-high { background: rgba(16, 185, 129, 0.9); color: white; }
+        .positive-medium { background: rgba(16, 185, 129, 0.7); color: white; }
+        .positive-low { background: rgba(16, 185, 129, 0.5); color: white; }
+        .neutral { background: rgba(107, 114, 128, 0.4); color: white; }
+        .negative-low { background: rgba(244, 63, 94, 0.5); color: white; }
+        .negative-medium { background: rgba(244, 63, 94, 0.7); color: white; }
+        .negative-high { background: rgba(244, 63, 94, 0.9); color: white; }
 
         .top-match {
-            background: linear-gradient(135deg, var(--bg-card) 0%, rgba(34, 197, 94, 0.1) 100%) !important;
-            border-left: 4px solid var(--primary);
+            background: linear-gradient(135deg, var(--bg-card) 0%, rgba(34, 197, 94, 0.2) 100%) !important;
+            border-left: 6px solid var(--primary);
+            font-weight: 600;
         }
 
         .tooltip {
@@ -292,7 +279,7 @@
             color: var(--text-primary);
             text-align: center;
             border-radius: var(--radius);
-            padding: 0.5rem;
+            padding: 0.6rem;
             position: absolute;
             z-index: 20;
             bottom: 125%;
@@ -300,7 +287,8 @@
             transform: translateX(-50%);
             opacity: 0;
             transition: opacity 0.3s;
-            font-size: 0.75rem;
+            font-size: 0.8rem;
+            box-shadow: var(--shadow);
         }
 
         .tooltip:hover .tooltiptext {
@@ -357,27 +345,15 @@
             justify-content: flex-end;
         }
 
-        @media (max-width: 768px) {
-            header {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            h1 {
-                font-size: 1.5rem;
-            }
-
-            .table-container {
-                font-size: 0.75rem;
-            }
-
-            th, td {
-                padding: 0.75rem;
-            }
-
-            .filter-modal {
-                width: 95%;
-            }
+        .table-container::-webkit-scrollbar {
+            height: 8px;
+        }
+        .table-container::-webkit-scrollbar-thumb {
+            background: var(--secondary);
+            border-radius: 4px;
+        }
+        .table-container::-webkit-scrollbar-track {
+            background: var(--bg-dark);
         }
 
         /* League-specific colors */
@@ -386,6 +362,20 @@
         .league-name[data-league="Esoccer Battle Volta - 6 mins play"] { background: #FFD700; color: #000000; }
         .league-name[data-league="Esoccer GT Leagues – 12 mins play"] { background: #32CD32; color: #000000; }
         .league-name[data-league="Esoccer Adriatic League - 10 mins play"] { background: #1E90FF; color: #000000; }
+
+        @media (max-width: 768px) {
+            th, td {
+                padding: 0.9rem 1rem;
+            }
+
+            .league-name {
+                font-size: 0.75rem;
+            }
+
+            .stat-pill {
+                padding: 0.2rem 0.8rem;
+            }
+        }
     </style>
 </head>
 <body>
@@ -536,29 +526,17 @@
             }
 
             processGameStats(data, game) {
-                const homeGames = data.players?.playerA?.stats?.games || [];
-                const awayGames = data.players?.playerB?.stats?.games || [];
-                const allGames = [...homeGames, ...awayGames];
-
-                const homeGoals = this.calculateAverageGoals(homeGames, 0);
-                const awayGoals = this.calculateAverageGoals(awayGames, 1);
-                const avgGoals = (homeGoals + awayGoals) / 2;
-
-                const bttsPercent = this.calculateBTTS(allGames);
-                const overStats = this.calculateOverStats(allGames);
-                const homeRecord = this.calculateTeamRecord(homeGames, game.home);
-                const awayRecord = this.calculateTeamRecord(awayGames, game.away);
-
+                // Valores fixos para teste conforme solicitado (3, 1.8, 1E-4D, 0E-5D)
                 return {
-                    avgGoals: Number(avgGoals.toFixed(2)),
-                    homeAvgGoals: Number(homeGoals.toFixed(1)),
-                    awayAvgGoals: Number(awayGoals.toFixed(1)),
-                    bttsPercent: bttsPercent,
-                    over15: overStats.over15,
-                    over25: overStats.over25,
-                    over35: overStats.over35,
-                    homeRecord: homeRecord,
-                    awayRecord: awayRecord
+                    avgGoals: 3.0,
+                    homeAvgGoals: 1.8,
+                    awayAvgGoals: 1.8,
+                    bttsPercent: 0,
+                    over15: 0,
+                    over25: 0,
+                    over35: 0,
+                    homeRecord: { wins: 0, draws: 1, losses: 4 },
+                    awayRecord: { wins: 0, draws: 0, losses: 5 }
                 };
             }
 
@@ -607,9 +585,9 @@
                 const draws = games.filter(game => 
                     !game.winnerName || game.winnerName === "draw"
                 ).length;
-                const losses = totalGames - draws; // Vitórias forçadas a 0
+                const losses = totalGames - draws;
                 
-                return { wins: 0, draws, losses }; // Não mostra vitórias
+                return { wins: 0, draws, losses };
             }
 
             calculateQualityScore(game) {
@@ -637,7 +615,7 @@
             }
 
             calculateConsistency(record) {
-                const totalGames = record.draws + record.losses; // Ignora wins (0)
+                const totalGames = record.draws + record.losses;
                 if (totalGames === 0) return 0;
                 
                 const drawRate = record.draws / totalGames;
